# flycron

./: Cargo.toml  README.md  flash.sh  flycron.py  memory.x
.cargo/: config.toml
control-law/: Cargo.toml
control-law/src/: lib.rs
mcu/: Cargo.toml  build.rs
mcu/src/: clock.rs  commands.rs  detail.rs  encoder.rs  main.rs  pid.rs  stepper_emulation.rs  trsync.rs  usb.rs
sim/: Cargo.toml  plot.py
sim/src/: main.rs
src/: chipid.rs  clock.rs  commands.rs  detail.rs  dshot.rs  main.rs  movequeue.rs  pid.rs  stepper_emulation.rs  trsync.rs  usb.rs
stepperemu/: Cargo.toml
stepperemu/src/: emulated_stepper.rs  lib.rs  target_queue.rs
