[package]
name = "flycron_mcu"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0.0", features = ["thumbv7-backend"] }
stm32f4xx-hal = { version = "0.20", features = [
  "stm32f411",
  "rtic2",
  "defmt",
  "usb_fs",
] }
rtic-monotonics = { version = "1.0.0" }
bbqueue = { version = "0.5.1", features = ["defmt_0_3", "cortex-m"] }
usb-device = { version = "0.3.1", features = ["defmt"] }
usbd-serial = "0.2.0"
anchor = { git = "https://github.com/Annex-Engineering/anchor.git" }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
fugit = { version = "0.3.7", features = ["defmt"] }
rtic-time = "1.3.0"
portable-atomic = { version = "1.6.0", features = ["float"] }
control_law = { path = "../control-law" }

[build-dependencies]
anchor_codegen = { git = "https://github.com/Annex-Engineering/anchor.git" }
